feat: 무비 데이터 조작 수정