@@ -8,6 +8,8 @@ import java.util.stream.Collectors;
 import common.DataRepository;
 import common.FilePath;
 import common.FileUtil;
+import exception.BookCancelException;
+import exception.MovieNotSelectableException;
 import movie.MovieDTO;
 import movie.PriceType;
 
@@ -42,17 +44,26 @@ public class BookDAO {
                         }).collect(Collectors.toList()));
     }
 
-    public synchronized boolean book(String movieId, String date, List<String> seatList, PriceType priceType) {
+    public synchronized String book(String movieId, String date, List<String> seatList, PriceType priceType) {
         List<String> seats = FileUtil.readLines(FilePath.SEAT_DIR_PATH + date + "/" + movieId + ".txt");
 
         String[][] seatArray = seats.stream().map(s -> s.split(FilePath.FILE_DELIMITER)).toArray(String[][]::new);
+
+        MovieDTO movie = dataRepository.getMovieMap().get(date).stream()
+                .filter(m -> m.getMovieId().equals(movieId))
+                .findFirst()
+                .orElse(null);
+
+        if (movie == null) {
+            throw new MovieNotSelectableException("없는 영화입니다.");
+        }
 
         for (String seat : seatList) {
             int row = seat.charAt(0) - 'A';
             int col = Integer.parseInt(seat.substring(1)) - 1;
 
             if (seatArray[row][col].equals("x")) {
-                return false;
+                return "";
             }
 
             seatArray[row][col] = "x";
@@ -68,11 +79,6 @@ public class BookDAO {
         int sqeunceNo = dataRepository.getBookList().size() + 1;
 
         String bookId = String.format("%08d", sqeunceNo);
-
-        MovieDTO movie = dataRepository.getMovieMap().get(date).stream()
-                .filter(m -> m.getMovieId().equals(movieId))
-                .findFirst()
-                .orElse(null);
 
         int totalPrice = 0;
 
@@ -107,44 +113,40 @@ public class BookDAO {
 
         FileUtil.appendLine(FilePath.BOOK_FILE_PATH, bookDTO.toString());
 
-        return true;
+        return bookId;
     }
 
-    // public synchronized void cancelBook(String bookId) {
-    // List<String> seats = FileUtil.readLines(FilePath.SEAT_DIR_PATH + date + "/" +
-    // movieId + ".txt");
+    public synchronized void cancelBook(String bookId) {
+        BookDTO book = dataRepository.getBookList()
+                .stream()
+                .filter(b -> b.getBookId().equals(bookId))
+                .findFirst()
+                .orElse(null);
 
-    // String[][] seatArray = seats.stream().map(s ->
-    // s.split(FilePath.FILE_DELIMITER)).toArray(String[][]::new);
+        if (book == null) {
+            throw new BookCancelException("없는 예약 id입니다.");
+        }
 
-    // for (String seat : seatList) {
-    // int row = seat.charAt(0) - 'A';
-    // int col = Integer.parseInt(seat.substring(1)) - 1;
+        String date = book.getScreeningTime().toLocalDate().toString();
+        String movieId = book.getMovieId();
+        List<String> seatList = book.getSeatList();
 
-    // seatArray[row][col] = "o";
-    // }
+        List<String> seats = FileUtil.readLines(FilePath.SEAT_DIR_PATH + date + "/" + movieId + ".txt");
 
-    // List<String> updatedSeats = Arrays.stream(seatArray)
-    // .map(row -> String.join(FilePath.FILE_DELIMITER, row))
-    // .collect(Collectors.toList());
+        String[][] seatArray = seats.stream().map(s -> s.split(FilePath.FILE_DELIMITER)).toArray(String[][]::new);
 
-    // FileUtil.writeLines(FilePath.SEAT_DIR_PATH + date + "/" + movieId + ".txt",
-    // updatedSeats);
-    // }
+        for (String seat : seatList) {
+            int row = seat.charAt(0) - 'A';
+            int col = Integer.parseInt(seat.substring(1)) - 1;
 
-    // public BookDTO findByBookId(String bookId) {
-    // return dataRepository.getBookList()
-    // .stream()
-    // .filter(book -> book.getBookId().equals(bookId))
-    // .findFirst()
-    // .orElse(null);
-    // }
+            seatArray[row][col] = "o";
+        }
 
-    // public List<BookDTO> findByMemberId(String memberId) {
-    // return dataRepository.getBookList()
-    // .stream()
-    // .filter(book -> book.getMemberId().equals(memberId))
-    // .sorted(Comparator.comparing(BookDTO::getScreeningTime).reversed())
-    // .toList();
-    // }
+        List<String> updatedSeats = Arrays.stream(seatArray)
+                .map(row -> String.join(FilePath.FILE_DELIMITER, row))
+                .collect(Collectors.toList());
+
+        FileUtil.writeLines(FilePath.SEAT_DIR_PATH + date + "/" + movieId + ".txt",
+                updatedSeats);
+    }
 }
